--- a/css/abcd design.css
+++ b/css/abcd design.css
@@ -206,8 +206,9 @@ body{
 	color: white;
 	position: absolute;
 	bottom: 81px;
-	right: -37px;
-  font-size: 17px;
+	right: -49px;
+  font-size: 24px;
+  white-space: nowrap;
 }
 
 .image-block {
